oci_cluster/alertmanager/alertmanager-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
  - "alert.horibe.com.br"
  gateways:
  - default-ingress.default
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9093
        host: alertmanager
